force-app/main/default/objects/Deal_Message__c/Deal_Message__c.object-meta.xml
<CustomObject>
    <description>One logged communication (call/email/meeting/note) in a deal negotiation. Append-only child of exactly one of LOI, Underwriting, or Contract Review - the shared message tracker shown in the Messages tab (dealMessageLog LWC), mirroring the Lease Activity pattern.</description>
    <label>Deal Message</label>
    <nameField>
        <displayFormat>MSG-{00000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>