force-app/main/default/objects/Deal_Message__c/fields/Contract_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Review</label>
    <referenceTo>Contract_Review__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Deal_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>