force-app/main/default/objects/Deal_Message__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>What was communicated.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>