force-app/main/default/objects/Deal_Message__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <description>When the communication happened (defaults to now; editable for backdating).</description>
    <label>Entry Date</label>
    <type>DateTime</type>
</CustomField>