force-app/main/default/objects/Deal_Message__c/fields/Entry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Entry_DateTime__c</fullName>
    <description>When the communication happened (defaults to now; editable for backdating). Orders the append-only deal message log. Replaces Entry_Date__c, whose _Date suffix asserted a date-only type it never had - this field stores date AND time, per ARCHITECTURE.md §1 rule 9.</description>
    <inlineHelpText>Date AND time the call, email or meeting actually happened - not when it was logged. Backdate it if you are recording an earlier conversation; the log is ordered newest-first by this value.</inlineHelpText>
    <label>Entry DateTime</label>
    <type>DateTime</type>
</CustomField>