force-app/main/default/objects/Deal_Message__c/fields/LOI__c.field-meta.xml
<CustomField>
    <fullName>LOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOI</label>
    <referenceTo>LOI__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Deal_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>