force-app/main/default/objects/Deal_Message__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>How the communication happened (mirrors the Renewal Activity pattern).</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
                <default>true</default>
                <label>Note</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>