force-app/main/default/objects/Deal_Message__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Document revision/version label entered by Legal for the PSA being discussed (e.g. v3, Rev B). Surfaced in the Counter History composer on Contract Review only.</description>
    <label>Document Revision</label>
    <length>30</length>
    <type>Text</type>
</CustomField>