force-app/main/default/objects/Deal_Message__c/fields/Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Underwriting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Underwriting</label>
    <referenceTo>Underwriting__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Deal_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>