force-app/main/default/objects/Deal_Message__c/validationRules/Exactly_One_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Exactly_One_Parent</fullName>
    <active>true</active>
    <description>A deal message belongs to exactly one negotiation record: an LOI, an Underwriting, or a Contract Review.</description>
    <errorConditionFormula>(IF(ISBLANK(LOI__c), 0, 1) + IF(ISBLANK(Underwriting__c), 0, 1) + IF(ISBLANK(Contract_Review__c), 0, 1)) &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Link this message to exactly one record: an LOI, an Underwriting, or a Contract Review.</errorMessage>
</ValidationRule>